--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -1,6 +1,8 @@
 <header>
   <nav>
     <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/sign-in">Sign In</a></li>
       <li><a href="/sign-up">Sign Up</a></li>
     </ul>
   </nav>
