--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,11 @@
     <%- include('components/head.ejs') %>
   </head>
   <body class="container">
-    <%- include('components/header.ejs') %>
-
-    <h1>Hello World!</h1>
-
-    <%- include('components/footer.ejs') %>
+    <%- include('components/header.ejs') %> <% if (user) {%>
+    <h1>WELCOME BACK <%= user.username %></h1>
+    <a href="/log-out">LOG OUT</a>
+    <% } else { %>
+    <h1>Please <a href="/sign-in">sign in</a>.</h1>
+    <%}%> <%- include('components/footer.ejs') %>
   </body>
 </html>
