--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -6,16 +6,16 @@
   <body class="container">
     <%- include('components/header.ejs') %>
 
-    <h1>Sign Up</h1>
+    <h1>Sign In</h1>
 
-    <form action="/sign-up" method="POST">
+    <form action="/sign-in" method="POST">
       <label for="username">Username</label>
       <input id="username" name="username" placeholder="username" type="text" />
 
       <label for="password">Password</label>
       <input id="password" name="password" type="password" />
 
-      <button type="submit">Sign Up</button>
+      <button type="submit">Sign In</button>
     </form>
 
     <%- include('components/footer.ejs') %>
