Enhance type safety

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <body class="container">
     <%- include('components/header.ejs') %> <% if (user) {%>
     <h1>WELCOME BACK <%= user.username %></h1>
-    <a href="/log-out">LOG OUT</a>
+    <a href="/sign-out">SIGN OUT</a>
     <% } else { %>
     <h1>Please <a href="/sign-in">sign in</a>.</h1>
     <%}%> <%- include('components/footer.ejs') %>
